# sortjscpd

./: .pylintrc  Makefile  README.md  pyproject.toml  sortjscpd.py
